src/test/TuplesFail2/TuplesFail2.expected
error: TuplesFail2.panda:1:13: expected a tuple with length 2 for multi-value assignment
error: TuplesFail2.panda:2:16: expected a tuple with length 3 for multi-value assignment
2 errors
